# zk-autobattler

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.scss  App.tsx  Deck.scss  Deck.tsx  Decks.scss  Decks.tsx  Header.scss  Header.tsx  Landing.tsx  Layout.scss  Layout.tsx  Study.scss  Study.tsx  auth.tsx  decs.d.ts  index.css  index.tsx  models.tsx  styles.scss  utils.tsx
client/src/components/: Creations.tsx  DeckView.tsx  Decks.tsx  Header.tsx  Landing.tsx  Play.tsx  Study.tsx
client/src/styles/: DeckView.scss  Decks.scss  Header.scss  Play.scss
core/: Cargo.toml
core/src/: lib.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml  build.rs
server/: Cargo.toml  README.md
server/src/: controllers.rs  main.rs
server/src/controllers/: games.rs  players.rs
server/src/models/: games.rs
